Unify starter poms and readmes with archetype 2